--- a/lerna.json
+++ b/lerna.json
@@ -2,11 +2,11 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0",
   "command": {
     "publish": {
       "conventionalCommits": true,
       "yes": true
     }
-  }
+  },
+  "version": "0.0.0"
 }
