--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "license": "MIT",
   "private": true,
   "workspaces": {
-    "packages": ["packages/*","examples/*"]
+    "packages": [
+      "packages/*",
+      "examples/*"
+    ]
   },
   "devDependencies": {
-    "lerna": "^3.22.1",
-    "prettier": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -25,6 +26,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.20.0",
+    "lerna": "^3.22.1",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   }
 }
