--- a/lerna.json
+++ b/lerna.json
@@ -7,5 +7,8 @@
       "conventionalCommits": true
     }
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "publishConfig": {
+    "access": "public"
+  }
 }
