--- a/packages/web-monetization/package.json
+++ b/packages/web-monetization/package.json
@@ -27,6 +27,9 @@
     "release": "yarn lerna publish",
     "release:dev": "yarn lerna publish -- canary"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1"
   },
@@ -38,6 +41,5 @@
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1"
-  },
-  "gitHead": "47ffa4a1c2a4d87d40ebcc959eb3d4c584e7e71a"
+  }
 }
