master: Fix build

--- a/packages/web-monetization/tsconfig.json
+++ b/packages/web-monetization/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "skipLibCheck": true,
     "declaration": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "declarationDir": "lib/types"
   }
 }
