--- a/packages/web-monetization/package.json
+++ b/packages/web-monetization/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@vanilla-lab/web-monetization",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Web Monetization API for Vanilla Service",
   "main": "lib/main.js",
   "types": "lib/types/index.d.ts",
   "author": "norbertdurcansky <norbert@cinnamon.video>",
-  "license" : "MIT" ,
+  "license": "MIT",
   "private": false,
   "homepage": "https://github.com/vanilla-wm/vanilla-plugins/tree/master/packages/web-monetization",
-  "keywords": ["web-monetization","monetization","vanilla"],
+  "keywords": [
+    "web-monetization",
+    "monetization",
+    "vanilla"
+  ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/vanilla-wm/vanilla-plugins.git"
+    "type": "git",
+    "url": "https://github.com/vanilla-wm/vanilla-plugins.git"
   },
   "files": [
     "lib"
